feat: Complete customer booking experience with comprehensive flow and vendor management
- Implemented full multi-step booking flow (ServiceSelection, EventDetails, DateTime, CustomerInfo, Review, Confirmation)
- Added comprehensive booking system with repository pattern, schemas, and API routes
- Enhanced vendor dashboard with package and profile management capabilities
- Integrated vendor public profiles with booking CTA and service display
- Added dynamic routing for vendor profiles and booking flows
- Implemented shared components for booking progress, date/time picker, and price calculator
- Enhanced vendor onboarding and management system
- Added comprehensive testing guide and database scripts
- Improved navigation and user experience across the platform

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed:dj": "tsx scripts/seed-dj-vendor.ts",
+    "seed:clean": "tsx scripts/cleanup-test-data.ts"
   },
   "dependencies": {
     "@builder.io/react": "^8.2.6",
@@ -31,6 +33,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.4.7",
     "tailwindcss": "^4",
+    "tsx": "^4.19.2",
     "typescript": "^5"
   }
 }
