Major update: Migrate to Supabase, add authentication system, vendor management, and comprehensive testing scripts

--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@builder.io/react": "^8.2.6",
     "@builder.io/sdk": "^6.1.2",
     "@heroicons/react": "^2.2.0",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.55.0",
     "bcryptjs": "^2.4.3",
     "better-sqlite3": "^11.5.0",
+    "dotenv": "^17.2.1",
     "jose": "^5.9.6",
     "next": "15.4.7",
     "react": "19.1.0",
